flash message added commit

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <div class="displaying">
                         <img class="quote-icon" src="./imgs/quote_icon.png" alt="Qoutes Icon">
                         <p></p>
-                        <img class="copy-icon" src="./imgs/clipboard_icon.png" alt="Copy to clipboard icon">
+                        <img class="copy-icon" src="./imgs/clipboard_icon@2x.png" alt="Copy to clipboard icon">
                     </div>
                 </div>
                 <div class="quote-btn">
@@ -45,12 +45,14 @@
                     <div class="form-wrap">
                         <textarea id="quote-content" name="" placeholder="Enter your quote here..."></textarea>
                         <div class="btn-wrap">
-                            <label id="error">120</label>
+                            <label id="error"></label>
+                            <div class="counter">164</div>
                             <button id="quoteBtn" class="form-btn">New Quote</button>
                         </div>
                     </div>
                 </div>
             </div>
+            <div class="flash-message"></div>
         </div>
     </main>
     <script src="./js/script.js"></script>
