flash message added commit

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <div class="quote-inner">
                     <div class="message">
                         <h3>Ooops</h3>
-                        <p>No Quote to display.</p>
+                        <p>Serve yourself a quote.</p>
                     </div>
                     <div class="displaying">
                         <img class="quote-icon" src="./imgs/quote_icon.png" alt="Qoutes Icon">
