--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <div class="quote-wrap">
                 <div class="quote-inner">
                     <div class="message">
-                        <h3>Ooops</h3>
-                        <p>Serve yourself a quote.</p>
+                        <h3>HELLO,</h3>
+                        <p>serve yourself a quote.</p>
                     </div>
                     <div class="displaying">
                         <img class="quote-icon" src="./imgs/quote_icon.png" alt="Qoutes Icon">
